repos/emily-python/contents/test/reader/fail/lparen.em
# Lparen with no rparen
# Arg: --ast
# Expect failure

abcd ( efg
